Add a bunch of graph algos

--- a/codebook.tex
+++ b/codebook.tex
@@ -38,6 +38,9 @@
 % New codebook
 \section{Flow and matching}
 
+\subsection{Edmond Karp}
+\lstinputlisting[language=c++]{edmond_karp.cpp}
+
 \subsection{Max flow (Dini\'c)} % Stanford
 \lstinputlisting[language=c++]{dinic.cpp}
 
@@ -83,6 +86,24 @@ incident upon it and add it to the edge set.
 \lstinputlisting[language=c++]{stablemp.cpp}
 
 \section{Graphs}
+
+\subsection{Topological Sort}
+\lstinputlisting[language=c++]{topological.cpp}
+
+\subsection{Dijkstra}
+\lstinputlisting[language=c++]{dijkstra.cpp}
+
+\subsection{Bellman Ford}
+\lstinputlisting[language=c++]{bellman_ford.cpp}
+
+\subsection{Floyd Warshall}
+\lstinputlisting[language=c++]{floyd.cpp}
+
+\subsection{Prim's}
+\lstinputlisting[language=c++]{prim.cpp}
+
+\subsection{Kruskal}
+\lstinputlisting[language=c++]{kruskal.cpp}
 
 \subsection{Strongly connected components} % Stanford (modified by Brian Bi)
 \lstinputlisting[language=c++]{scc.cpp}
