Add prime stuff

--- a/codebook.tex
+++ b/codebook.tex
@@ -164,6 +164,10 @@ is colored black.
 
 \section{Geometry}
 
+\subsection{Heron's formula}
+$S = \frac{A+B+C}{2} \quad$
+$A = \sqrt{S(S-A)(S-B)(S-C)}$
+
 \subsection{Miscellaneous Geometry} % Stanford
 \lstinputlisting[language=c++]{geom-2d.cpp}
 
@@ -191,6 +195,9 @@ there is no generalization to higher dimensions)
 
 \subsection{Sieve of Eratosthenes} % Jimmy Mårdell (Yarin)
 \lstinputlisting[language=c++]{yarin.cpp}
+
+\subsection{Primes}
+\lstinputlisting[language=c++]{primes.cpp}
 
 \subsection{Modular arithmetic and linear Diophantine solver} % Stanford
 \lstinputlisting[language=c++]{modular.cpp}
