Add python modulo macro

--- a/codebook.tex
+++ b/codebook.tex
@@ -326,6 +326,9 @@ for each token:
 \subsection{Longest palindromic substring} % Brian Bi
 \lstinputlisting[language=c++]{manacher.cpp}
 
+\subsection{Python modulo} % Brian Bi
+\lstinputlisting[language=c++]{pythonMod.cpp}
+
 \subsection{.vimrc} % Brian Bi
 \lstinputlisting{vim.rc}
 
